Fixed double decimal input and display overflow

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -7,20 +7,21 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    height: 75vh;
 }
 
 .display {
     background-color: black;
     color: lime;
-    height: 50px;
     display: flex;
     justify-content: end;
     align-items: center;
+    text-align: right;
     padding: 10px;
     font-size: 36px;
     border-radius: 1rem;
-    flex-wrap: break-word;
     margin-bottom: 20px;
+    word-break: break-all;
 }
 
 .calculator-container {
@@ -28,12 +29,13 @@ body {
     padding: 20px;
     background-color: #666666;
     border-radius: 1rem;
+    width: 250px;
 }
 
 .row {
     display: flex;
     gap: 5px;
-    margin: 5px;
+    margin: 5px 0px;
 }
 
 .row > button,
